# reverse-arb

./: ._README.md  ._fly.toml  .dockerignore  Dockerfile  README.md  evaluate.py  fly.toml  loop-state.md  program.md  pyproject.toml
config/: .env.example  config.yaml
deploy/: entry.py  fly.toml
src/: __init__.py
src/api/: __init__.py  auth.py  server.py
src/arbitrage/: __init__.py  reverse_arb.py
src/core/: __init__.py  arbitrage_engine.py  config.py  types.py
src/execution/: __init__.py  executor.py
src/market_data/: __init__.py  clob_client.py
src/risk/: __init__.py  risk_engine.py
src/security/: __init__.py  vault.py
tests/: test_core.py
