[project]
name = "polymarket-reverse-arb"
version = "1.0.0"
description = "Institution-grade Polymarket HFT Reverse Arbitrage Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Async HTTP & WebSocket
    "aiohttp>=3.9",
    "websockets>=12.0",
    "httpx>=0.27",

    # Crypto
    "eth-account>=0.10",
    "eth-keys>=0.4",
    "eth-utils>=4.0",
    "eip712>=0.2",

    # Math & Data
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "redis>=5.0",

    # Monitoring
    "prometheus-client>=0.19",
    "structlog>=24.0",

    # Utilities
    "python-json-logger>=2.0",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.6",
]
web = [
    "aiohttp>=3.9",
    "websockets>=12.0",
]
backtest = [
    "polars>=1.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
namespace_packages = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = ["E501", "B008", "SIM103"]
per-file-ignores = { "tests/*" = [] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]